<resources>
    <string name="app_name">NewSkribble</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="randomText">Hello, this is the real description of any language you have chosen</string>




    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="music">Music</string>
    <string name="selectLang">Select Language</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signuphere">... or sign up here!</string>
    <string name="note">Note</string>
    <string name="back">Back</string>
    <string name="write">Write something...</string>
    <string name="enter">Enter</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="accountAl">Already have an account?</string>
    <string name="logHere">Login here!</string>
    <string name="settings">Settings</string>
    <string name="changeUser">Change Username</string>
    <string name="changePass">Change Password</string>
    <string name="changeEmail">Change Email</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="hello">Hello, </string>
    <string name="logout">Log Out </string>
    <string name="Language">Language </string>
    <string name="notes">Notes </string>







</resources>