<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notesTab"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />

        <item
            android:id="@+id/settingsTab"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/LanguageTab"
            android:icon="@drawable/ic_language"
            android:title="@string/Language" />

        <item
            android:id="@+id/MusicTab"
            android:icon="@drawable/ic_music"
            android:title="@string/music" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/LogOutTab"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>
</menu>