<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/note_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"/>

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/note_header"
        app:layout_constraintStart_toStartOf="@+id/note_header"
        app:layout_constraintTop_toTopOf="@+id/note_header"
        android:background="@android:color/transparent"
        android:text="@string/note"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_goMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/note_title"
        app:layout_constraintEnd_toEndOf="@+id/note_title"
        app:layout_constraintTop_toTopOf="@+id/note_title"
        />

    <EditText
        android:id="@+id/note_text"
        android:background="@drawable/custom_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_header"
        android:hint="@string/write" />

    <TextView
        android:id="@+id/note_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue" />

    <Button
        android:id="@+id/button_editNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/note_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/note_bottom"
        />

</androidx.constraintlayout.widget.ConstraintLayout>